Reformat the entire project